--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,12 +2,11 @@
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
-.container {
-    max-width: 950px;
-    margin: 0 auto;
+.container{
+  max-width: 950px;
+  margin: 0 auto;
 }
+
 @import 'blocks/promo';
-@import 'blocks/header.scss';
+@import 'blocks/header';
 @import 'blocks/buttons';
-@import 'blocks/advantages';
-@import 'blocks/titles';
