--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,7 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/advantages';
+@import 'blocks/titles';
+@import 'media';
+
