--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -4,6 +4,20 @@
       align-items: center;
     }
   }
+  .title {
+    &_left {
+      text-align: center;
+    }
+  }
+  .consultation {
+    &__descr {
+      text-align: center;
+    }
+  }
+  .feed-form {
+    margin: 0 auto;
+    margin-top: 36px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -21,6 +35,16 @@
     }
     &__phone {
       font-size: 16px;
+    }
+  }
+  .title {
+    &_left {
+      font-size: 28px;
+    }
+  }
+  .consultation {
+    &__descr {
+      font-size: 18px;
     }
   }
 }
@@ -64,5 +88,14 @@
       margin-top: 12px;
     }
   }
-
+  .title {
+    &_left {
+      font-size: 20px;
+    }
+  }
+  .consultation {
+    &__descr {
+      font-size: 15px;
+    }
+  }
 }
