--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,5 +12,7 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
 @import 'media';
 
