--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -19,4 +19,9 @@
       height: 55px;
       font-size: 16px;
     }
+    &_mini {
+      font-style: 14px;
+      width: 131px;
+      height: 40px;
+    }
 }
