--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,8 @@
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
-@import 'media';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feedback';
+@import 'media';
 
