--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -142,4 +142,11 @@
       margin: 20px 10px
     }
   }
+  .footer {
+    &__info {
+      width: 100%;
+      padding: 50px 0 60px 0;
+      position: relative;
+    }
+  }
 }
