--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables';
+@import 'base/animation';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -19,5 +20,6 @@
 @import 'blocks/feedback';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
 @import 'media';
 
